# opencut-pyside

./: .gitattributes  .gitignore  README.md  ROADMAP.md  TASK.md  __init__.py  app_controller.py  bootstrap.py  editor_app.py  main.py  markers.py  project.py  project_controller.py  pyproject.toml  requirements-dev.txt  selection.py  timeline_controller.py
controllers/: __init__.py  app_controller.py  export_controller.py  inspector_controller.py  playback_controller.py  project_controller.py  selection_controller.py  timeline_controller.py
docs/: architecture.md  dev-guide.md  feature-map.md  product-spec.md  project-plan.md  project-structure.md  prompts-for-ai.md
domain/: __init__.py  keyframe.py  markers.py  media_asset.py  project.py  snap_engine.py  timeline.py  track.py
dto/: __init__.py  export_dto.py  media_dto.py  project_dto.py
i18n/: README.md  opencut_en.ts  opencut_vi.ts
infrastructure/: __init__.py  cache_store.py  ffmpeg_gateway.py  ffprobe_gateway.py  file_repository.py  logging_config.py  process_runner.py  temp_manager.py  translation_manager.py  video_decoder.py
packaging/: build_linux.sh  build_windows.ps1  opencut-pyside.spec
scripts/: update_translations.sh
services/: __init__.py  audio_playback_service.py  autosave_service.py  caption_service.py  export_service.py  media_service.py  playback_service.py  project_service.py  settings_service.py  thumbnail_service.py
tests/: conftest.py  test_caption_service.py  test_media_service.py  test_playback_controller.py  test_playback_service.py  test_settings_service.py  test_smoke.py  (+5 more)
(+51 files in other folders)
